fix(toggle): spacing

--- a/src/components/toggle.module.css
+++ b/src/components/toggle.module.css
@@ -15,6 +15,7 @@
   border-radius: 50%;
   border: none;
   overflow: hidden;
+  padding: 0;
 }
 
 @media (min-width: 769px) {
